// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useOfferDetailsSetup should add correct header for account with payment data 1`] = `
<Header
  icons={
    [
      {
        "color": "#7D675E",
        "id": "edit3",
        "onPress": [Function],
      },
      {
        "color": "#099DE2",
        "id": "helpCircle",
        "onPress": [MockFunction],
      },
    ]
  }
  title="payment methods"
/>
`;

exports[`useOfferDetailsSetup should add the correct header 1`] = `
<Header
  icons={
    [
      {
        "color": "#099DE2",
        "id": "helpCircle",
        "onPress": [MockFunction],
      },
    ]
  }
  title="payment methods"
/>
`;

exports[`useOfferDetailsSetup should add the correct while editing header 1`] = `
<Header
  icons={
    [
      {
        "color": "#7D675E",
        "id": "checkboxMark",
        "onPress": [Function],
      },
      {
        "color": "#099DE2",
        "id": "helpCircle",
        "onPress": [MockFunction],
      },
    ]
  }
  title="edit payment methods"
/>
`;
